package design.adapter;

public class PoliceLamp {
	public void alarmLamp() {
		System.out.println("呈现警灯闪烁！");
	}

}
