package design.adapter;

public class PoliceSound {
	public void alarmSound() {
		System.out.println("发出警笛声音！");
	}

}
